--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   "dependencies": {
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "styled-components": "^5.3.5",
+    "typed.js": "^2.0.12",
+    "typedjs": "^0.2.2",
+    "util": "^0.12.4",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.10",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
