--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.6.1",
     "instagram-web-api": "^2.2.2",
     "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-loader-spinner": "^5.3.4",
     "typed.js": "^2.0.12",
     "typedjs": "^0.2.2",
     "util": "^0.12.4",
